fixed spacing of term sheet

--- a/client/styles/default/styles.less
+++ b/client/styles/default/styles.less
@@ -591,13 +591,17 @@ div.add-flex-div-hide {
   text-align: center;
   border: 1px solid #ccc;
   border-radius: 10px;
-  margin: 1rem;
+  margin: 0rem;
   min-height: 8rem;
   /* vertical-align: middle; */
   /* display: inline-block; */
 }
 
-div.input-field.col.s4 > h4{
+
+div.input-field.col.s4 {
+  min-height: 11rem;
+  h4 {
     text-align: center;
     padding-top: 1.2rem;
+  }
 }
